--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
     background-color: #111827;
     color: #D1D5DB;
+    font-family: Inter;
 }
 
 @font-face {
@@ -12,88 +13,71 @@ body {
     src: url(font/Inter-Regular.ttf);
 }
 
-.container-fluid {
-    margin-top: 50px;
-}
-
-.feedback-card {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 40px;
-}
-
-.feedback-card img {
-    margin-bottom: 15px;
-}
-
-.col-4 {
-    border-radius: 12px;
+.card {
     background-color: #1F2937;
+    border-radius: 12px;
     box-shadow: 0px 25px 25px 0px #00000026;
-    width: 530px;
+    color: #D1D5DB;
     height: 356px;
-    margin: 25px auto;
 }
 
-.row {
-    justify-content: center;
-}
-
-.tag {
+.h2 {
     width: 125px;
     height: 28px;
     border-radius: 12px;
     background-color: #374151;
-    text-align: center;
-    font-family: Inter;
+    margin: auto;
+    padding-top: 5px;
     font-size: 14px;
     font-weight: 500;
-    padding-top: 3px;
 }
 
-.feedbacks-about-me {
-    font-family: Inter;
+#headline {
     font-size: 20px;
-    text-align: center;
     color: #D1D5DB;
+}
+
+#icon-avatar {
+    margin-bottom: 15px;
 }
 
 .feedback {
-    font-family: Inter;
-    line-height: 24px;
     color: #D1D5DB;
+    text-align: left;
 }
 
 .name {
-    font-family: Inter;
     font-size: 20px;
     font-weight: 600;
     color: #F9FAFB;
+    margin: 0;
 }
 
-.founder {
-    font-family: Inter;
+.job {
     font-size: 14px;
     color: #D1D5DB;
     margin: 0;
 }
 
-.container {
-    margin-top: 80px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+.tag {
+    width: 105px;
+    height: 28px;
+    text-align: center;
+    border-radius: 12px;
+    background-color: #374151;
+    margin: auto;
+    padding-top: 5px;
+    font-size: 14px;
+    font-weight: 500;
 }
 
-
-.col img {
+#profile-img {
+    max-width: 400px;
     background-image: url(img/Background.png);
     background-repeat: no-repeat;
     padding-left: 40px;
-    background-position-y: 40px;    
-    padding-bottom: 40px;
-    margin-bottom: 25px;
+    background-position-y: 40px;
+    padding-bottom: 35px;
 }
 
 .about-me h1 {
@@ -101,7 +85,7 @@ body {
     font-size: 30px;
     font-weight: 600;
     letter-spacing: -0.02em;
-    color: #F9FAFB  ;
+    color: #F9FAFB;
 }
 
 .about-me p {
@@ -115,16 +99,13 @@ body {
 }
 
 ul {
-    width: 604px;
     display: flex;
-    gap: 100px;
+    flex-wrap: wrap;
 }
 
 ul li {
+    margin-left: 25px;
     margin-bottom: 10px;
     font-family: Inter;
     color: #D1D5DB;
 }
-
-
-
